--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,3 +1,9 @@
+@import "tailwindcss/base";
+
+@import "tailwindcss/components";
+
+@import "tailwindcss/utilities";
+
 $font-stack: Helvetica, sans-serif;
 $primary-color: #333;
 
